cabal-version:       2.2

name:                lamia
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/itsakeyfut/lamia#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              itsakeyfut
maintainer:          example@example.com
copyright:           2025 itsakeyfut
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable lamia
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
    parsec >= 3.1
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

